Fix spacing

--- a/apps/apple-nest-3/src/app/App.scss
+++ b/apps/apple-nest-3/src/app/App.scss
@@ -223,5 +223,5 @@ div.place-actions span {
 }
 
 .place-nav-spacer {
-  width: 120px;
+  width: 80px;
 }
